tests/paczka1/fuzzy1/37171166.err
Error in line 5: WNf8BrITV A538 2,2
Error in line 12: 83Cj S551 72,1
Error in line 10: E7PCEI S551 74,7
Error in line 18: WNf8BrITV A538 2,9
Error in line 19: WNf8BrITV S551 55,8
Error in line 25: WNf8BrITV S742 81,6
Error in line 13: 83Cj A538 19,9
